@@ -99,6 +99,7 @@ Release 0.92.2 - Unreleased
    HBASE-6334  TestImprovement for TestHRegion.testWritesWhileGetting (Gregory Chanan)
    HBASE-4470  ServerNotRunningException coming out of assignRootAndMeta kills the Master (Gregory Chanan) 
    HBASE-6460  hbck "-repairHoles" usage inconsistent with "-fixHdfsOrphans" (Jie Huang)
+   HBASE-6507 [hbck] TestHBaseFsck ran into TableNotEnabledException
 
   IMPROVEMENTS
    HBASE-5592  Make it easier to get a table from shell (Ben West)
